--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "rss": "https://github.com/craftcms/commerce-mollie/commits/master.atom"
   },
   "require": {
-    "craftcms/commerce-mollie": "*",
+    "craftcms/commerce-mollie": "^2.0.0-alpha.5",
     "omnipay/mollie": "~3.0"
   },
   "autoload": {
@@ -33,12 +33,6 @@
       "craft\\commerce\\mollie\\": "src/"
     }
   },
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://asset-packagist.org"
-    }
-  ],
   "extra": {
     "name": "Mollie",
     "handle": "commerce-mollie",
