--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "rss": "https://github.com/craftcms/commerce-mollie/commits/master.atom"
   },
   "require": {
-    "craftcms/commerce-mollie": "^2.0.0-alpha.5",
+    "craftcms/commerce-omnipay": "^1.0.0",
     "omnipay/mollie": "~3.0"
   },
   "autoload": {
