--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     }
   },
   "extra": {
-    "name": "Mollie",
+    "name": "Mollie for Craft Commerce",
     "handle": "commerce-mollie",
     "changelogUrl": "https://raw.githubusercontent.com/craftcms/commerce-mollie/master/CHANGELOG.md",
     "downloadUrl": "https://github.com/craftcms/commerce-mollie/archive/master.zip"
