--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "craftcms/commerce-mollie",
   "description": "Mollie integration for Craft Commerce",
-  "version": "1.0.0.1",
+  "version": "1.1.0",
   "type": "craft-plugin",
   "keywords": [
     "mollie",
@@ -10,7 +10,7 @@
     "omnipay",
     "yii2"
   ],
-  "license": "proprietary",
+  "license": "MIT",
   "authors": [
     {
       "name": "Pixel & Tonic",
