--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,17 @@
     "docs": "https://github.com/craftcms/commerce-mollie",
     "rss": "https://github.com/craftcms/commerce-mollie/commits/master.atom"
   },
+  "repositories": [
+      {
+          "type": "vcs",
+          "url": "https://github.com/boboldehampsink/commerce-omnipay"
+      }
+  ],
   "require": {
     "craftcms/cms": "^3.1.0",
-    "craftcms/commerce-omnipay": "^1.0.0",
-    "omnipay/mollie": "~3.0"
+    "craftcms/commerce-omnipay": "dev-omnipay-3 as 1.1.0",
+    "omnipay/mollie": "^5.0",
+    "php-http/guzzle6-adapter": "^1.1.1"
   },
   "autoload": {
     "psr-4": {
