--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "craftcms/commerce-mollie",
   "description": "Mollie integration for Craft Commerce",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "type": "craft-plugin",
   "keywords": [
     "mollie",
@@ -24,15 +24,9 @@
     "docs": "https://github.com/craftcms/commerce-mollie",
     "rss": "https://github.com/craftcms/commerce-mollie/commits/master.atom"
   },
-  "repositories": [
-      {
-          "type": "vcs",
-          "url": "https://github.com/boboldehampsink/commerce-omnipay"
-      }
-  ],
   "require": {
     "craftcms/cms": "^3.1.0",
-    "craftcms/commerce-omnipay": "dev-omnipay-3 as 1.1.0",
+    "craftcms/commerce-omnipay": "^2.0.0",
     "omnipay/mollie": "^5.0",
     "php-http/guzzle6-adapter": "^1.1.1"
   },
