--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "craftcms/commerce-mollie",
   "description": "Mollie integration for Craft Commerce",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "type": "craft-plugin",
   "keywords": [
     "mollie",
@@ -26,7 +26,7 @@
   },
   "require": {
     "craftcms/cms": "^3.1.5",
-    "craftcms/commerce": "^2.0.0",
+    "craftcms/commerce": "^2.0|^3.0",
     "craftcms/commerce-omnipay": "^2.0.0",
     "omnipay/mollie": "^5.0"
   },
