Updated for Commerce 3.3

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "craftcms/commerce-mollie",
   "description": "Mollie integration for Craft Commerce 2 & 3",
-  "version": "2.1.2.1",
+  "version": "3.0.0",
   "type": "craft-plugin",
   "keywords": [
     "mollie",
@@ -25,9 +25,8 @@
     "rss": "https://github.com/craftcms/commerce-mollie/commits/master.atom"
   },
   "require": {
-    "craftcms/cms": "^3.1.5",
-    "craftcms/commerce": "^2.0|^3.0",
-    "craftcms/commerce-omnipay": "^2.0.0",
+    "craftcms/commerce": "^3.3",
+    "craftcms/commerce-omnipay": "^3.0.0",
     "omnipay/mollie": "^5.0"
   },
   "autoload": {
