--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
     "rss": "https://github.com/craftcms/commerce-mollie/commits/master.atom"
   },
   "require": {
+    "craftcms/cms": "^3.6",
     "craftcms/commerce": "^3.3",
-    "craftcms/commerce-omnipay": "^3.0.0",
+    "craftcms/commerce-omnipay": "^3.0",
     "omnipay/mollie": "^5.0"
   },
   "autoload": {
