--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "craftcms/commerce-mollie",
-  "description": "Mollie integration for Craft Commerce 2 & 3",
+  "description": "Mollie integration for Craft Commerce 3.3+",
   "version": "3.0.0",
   "type": "craft-plugin",
   "keywords": [
