--- a/composer.json
+++ b/composer.json
@@ -38,5 +38,19 @@
   "extra": {
     "name": "Mollie for Craft Commerce",
     "handle": "commerce-mollie"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "require-dev": {
+    "craftcms/phpstan": "dev-main"
+  },
+  "scripts": {
+    "phpstan": "phpstan --memory-limit=1G"
+  },
+  "config": {
+    "allow-plugins": {
+      "yiisoft/yii2-composer": true,
+      "craftcms/plugin-installer": true
+    }
   }
 }
