--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: PHP Checks
 
 on:
   push:
-    branches: [ develop, commerce4 ]
+    branches: [ develop, 4.0 ]
   pull_request:
-    branches: [ develop, commerce4 ]
+    branches: [ develop, 4.0 ]
 
 jobs:
   build:
