--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
   },
   "require": {
     "php": "^8.0.2",
-    "craftcms/cms": "^4.0.0-RC3",
-    "craftcms/commerce": "^4.0.0-RC1",
-    "craftcms/commerce-omnipay": "^4.0.0-RC1",
+    "craftcms/cms": "^4.0.0",
+    "craftcms/commerce": "^4.0.0",
+    "craftcms/commerce-omnipay": "^4.0.0",
     "omnipay/mollie": "^5.0"
   },
   "autoload": {
