--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "craftcms/commerce-mollie",
-  "description": "Mollie integration for Craft Commerce 4.0+",
+  "description": "Mollie integration for Craft Commerce 5.0+",
   "type": "craft-plugin",
   "keywords": [
     "mollie",
@@ -24,10 +24,10 @@
     "rss": "https://github.com/craftcms/commerce-mollie/commits/master.atom"
   },
   "require": {
-    "php": "^8.0.2",
-    "craftcms/cms": "^4.0.0",
-    "craftcms/commerce": "^4.0.0",
-    "craftcms/commerce-omnipay": "^4.0.0.1",
+    "php": "^8.2",
+    "craftcms/cms": "^5.0.0-beta.6",
+    "craftcms/commerce": "^5.0.0-beta.1",
+    "craftcms/commerce-omnipay": "^5.0.0-beta.1",
     "omnipay/mollie": "^5.0"
   },
   "autoload": {
@@ -57,7 +57,7 @@
       "php-http/discovery": true
     },
     "platform": {
-      "php": "8.0.2"
+      "php": "8.2"
     }
   }
 }
